Most of secure channel establishment test working on enclave side. Dummy client setup for host side for now.

--- a/clients/Makefile
+++ b/clients/Makefile
@@ -7,7 +7,7 @@ $(error LIBSODIUM is not set)
 endif
 
 APP = clients
-APP_C_SRCS= clients.c edge_wrapper.c calculator.c
+APP_C_SRCS= clients.c edge_wrapper.c calculator.c channel.c
 
 CC = riscv64-unknown-linux-gnu-gcc
 CFLAGS = -Wall -Werror
