Updated for newer interfaces and building with musl-libc rather than hacks.h

--- a/server_eapp/Makefile
+++ b/server_eapp/Makefile
@@ -9,9 +9,9 @@ endif
 APP = server_eapp
 APP_C_SRCS= server_eapp.c edge_wrapper.c calculator.c channel.c
 
-CC = riscv64-unknown-linux-gnu-gcc
+CC = musl-gcc #riscv64-unknown-linux-gnu-gcc
 CFLAGS = -Wall -Werror
-LINK = riscv64-unknown-linux-gnu-ld
+LINK = musl-gcc #riscv64-unknown-linux-gnu-ld
 AS = riscv64-unknown-linux-gnu-as
 
 SDK_LIB_DIR = $(KEYSTONE_SDK_DIR)/lib
@@ -44,4 +44,3 @@ $(APP_BIN): %.eapp_riscv : $(APP_C_OBJS) $(APP_A_OBJS) $(SDK_APP_LIB) $(SDK_EDGE
 
 clean:
 	rm -f *.o $(APP_BIN) $(EXTRA_CLEAN)
-
