--- a/server_eapp/Makefile
+++ b/server_eapp/Makefile
@@ -24,10 +24,9 @@ SOD_INCLUDE_DIR = $(LIBSODIUM_DIR)/include
 SOD_LIB_DIR = $(LIBSODIUM_DIR)/.libs
 SOD_LIB = $(SOD_LIB_DIR)/libsodium.a
 
-FLATCC_INCLUDE_DIR = $(FLATCC_DIR)/include
-FLATCC_LIB = $(KEYEDGE_LIB_DIR)/flatccrt.a
-KEYEDGE_INCLUDE_DIR = $(KEYEDGE_DIR)/include
-KEYEDGE_LIB_DIR = $(KEYEDGE_DIR)/lib
+FLATCC_INCLUDE_DIR = $(KEYEDGE_DIR)/flatcc/include
+FLATCC_LIB = $(KEYEDGE_DIR)/lib/flatccrt.a
+KEYEDGE_INCLUDE_DIR = $(KEYEDGE_DIR)/target/include
 
 LDFLAGS = -static -L$(SDK_LIB_DIR) -L$(SOD_LIB_DIR) -L$(KEYEDGE_LIB_DIR)
 CFLAGS += -I$(SDK_INCLUDE_APP_DIR) -I$(SDK_INCLUDE_EDGE_DIR) -I../include -I../keyedge -I$(SOD_INCLUDE_DIR) -I$(KEYEDGE_INCLUDE_DIR) -I$(FLATCC_INCLUDE_DIR)
