--- a/server_eapp/CMakeLists.txt
+++ b/server_eapp/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable(server_eapp
+add_executable(server_eapp.eapp_riscv
   server_eapp.c
   edge_wrapper.c
   calculator.c
@@ -7,10 +7,10 @@ add_executable(server_eapp
 include_directories(include
   ${KEYSTONE_SDK_DIR}/include/app)
 
-target_link_libraries(server_eapp
+target_link_libraries(server_eapp.eapp_riscv
   ${KEYSTONE_LIB_EDGE}
   ${KEYSTONE_LIB_EAPP}
   ${LIBSODIUM_DIR}/.libs/libsodium.a)
 
-set_target_properties(server_eapp
+set_target_properties(server_eapp.eapp_riscv
   PROPERTIES LINK_FLAGS "-nostdlib -static -T ${CMAKE_CURRENT_SOURCE_DIR}/app.lds")
